master
-------------------------

* Allow specifying minimum number of matches for `by_terms` filter.

* Add `MinHashAnalyzer` capable of producing tokens composing a MinHash
  signature.

* Add `ByNestedFilter` capable of matching documents by nested query.

* Add ability to access previous document for columnstore2 iterators.

* Remove outdated `DECLARE_FACTORY_INLINE` macros.

* Add `MergeType::kMin` allowing to evaluate minimum sub-iterator score.

* Fix issue with loosing already flushed segment in case of failure during
  document insertion into the same segment.

* Force scorers to return scores as floating point numbers.

* Deprecate and remove `iql`.

* Use abseil as a submodule.

* Added proxy_filter for caching search results.

* Add ARM support.

* Speedup BM25 scorer.

* Move to C++20.

* Add `classification_stream` capable of classifying input data based on FastText NN model.

* Add `nearest_neighbors_stream` capable of generating synonyms based on FastText NN model.

v1.1 (2022-01-05)
-------------------------

* Add support of column headers to columnstore.

* Make column name and id a part of columnstore API.

* Deprecate `column_meta`, `column_meta_writer`, `column_meta_reader`.

* Fix possible race between file creation and directory cleaner.

* Fix invalid sorting order of stored features in presence of primary sort.

* Enhance troubleshooting experience for the analyzers required locale.

* Eliminate dependency to Boost.Locale.

* Get rid of internal conversions during analysis. All text analyzers now expect UTF-8 encoded input.

* Fix threading related issues reported by TSAN.

* Add "object" locale parsing for the `collation_token_stream` to support definig locale variant
  and keywords.

* Get rid of `utf8_path` in favor of `std::filesystem::path`.

* Fix sporadic "error while reading compact" failures.

* Rework Compression API to return `std::unique_ptr` instead of `std::shared_ptr`.
